--- a/1dRHEL/1dwf2-Create-VPC.yml
+++ b/1dRHEL/1dwf2-Create-VPC.yml
@@ -2,6 +2,7 @@
 ---
 - name: Play to Create AWS VPC
   hosts: localhost
+  connection: local
   tasks:
     # VPC or Virtual Private Cloud.  The instance will be tied to a subnet that belongs to this particular VPC
     - name: Create AWS VPC aws-demo1-vpc
