--- a/1dRHEL/1dwf4-Create-internet-gateway.yml
+++ b/1dRHEL/1dwf4-Create-internet-gateway.yml
@@ -1,7 +1,8 @@
 # code: language=ansible
 ---
-- name: Play to Create AWS VPC
+- name: Play to Create Internet Gateway and attache to VPC
   hosts: localhost
+  connection: local
   tasks:
     # Create Internet Gateway and attach it to VPC.  This allows instances on this VPC to reach the Internet
     - name: create vpc internet gateway for aws-demo1-vpc
