--- a/1dRHEL/1dwf2-Create-VPC.yml
+++ b/1dRHEL/1dwf2-Create-VPC.yml
@@ -13,10 +13,14 @@
         tags:
           Demo: "AWS demo1"
       register: create_vpc
+    # - name: save the create_vpc variable for following job templates
+    #   ansible.builtin.set_stats:
+    #     data:
+    #       vpcid: "{{ create_vpc.vpc.id }}"
     - name: save the create_vpc variable for following job templates
-      ansible.builtin.set_stats:
-        data:
-          vpcid: "{{ create_vpc.vpc.id }}"
+      ansible.builtin.set_fact:
+        vpcid: "{{ create_vpc.vpc.id }}"
+
     - name: print vpcid
       ansible.builtin.debug:
         msg: "{{ vpcid }}"
