--- a/1dRHEL/1dwf2-Create-VPC.yml
+++ b/1dRHEL/1dwf2-Create-VPC.yml
@@ -20,6 +20,7 @@
     - name: save the create_vpc variable for following job templates
       ansible.builtin.set_fact:
         vpcid: "{{ create_vpc.vpc.id }}"
+      register: vpcid
     - name: print vpcid
       ansible.builtin.debug:
-        msg: "{{ vpcid }}"
+        msg: The Demo1 VPC ID is:"{{ vpcid }}"
