--- a/1dRHEL/1dwf2-Create-VPC.yml
+++ b/1dRHEL/1dwf2-Create-VPC.yml
@@ -13,14 +13,12 @@
         tags:
           Demo: "AWS demo1"
       register: create_vpc
-    # - name: save the create_vpc variable for following job templates
-    #   ansible.builtin.set_stats:
-    #     data:
-    #       vpcid: "{{ create_vpc.vpc.id }}"
+#
     - name: save the create_vpc variable for following job templates
-      ansible.builtin.set_fact:
-        vpcid: "{{ create_vpc.vpc.id }}"
-      register: vpcid
+      ansible.builtin.set_stats:
+        data:
+          vpcid: "{{ create_vpc.vpc.id }}"
+#
     - name: print vpcid
       ansible.builtin.debug:
-        msg: The Demo1 VPC ID is:"{{ vpcid }}"
+        msg: '"The Demo1 VPC ID is: "{{ vpcid }}"'
