--- a/1dRHEL/1d-Teardown-all-AWS-WF-resources.yml
+++ b/1dRHEL/1d-Teardown-all-AWS-WF-resources.yml
@@ -17,18 +17,18 @@
       amazon.aws.ec2_instance_info:
         filters:
           "tag:Name": "aws-demo1-ec2"
-      register: aws-demo1-ec2
+      register: aws-ec2
 
     - name: destroy the EC2 instance
       amazon.aws.ec2:
         tags:
           Name: "aws-demo1-ec2"
         state: absent
-        instance_ids: "{{ aws-demo1-ec2.instances | map(attribute='instance_id') | list }}"
+        instance_ids: "{{ aws-ec2.instances | map(attribute='instance_id') | list }}"
       register: result
       when:
-        - aws-demo1-ec2.instances is defined
-        - aws-demo1-ec2.instances
+        - aws-ec2.instances is defined
+        - aws-ec2.instances
 
     - name: Get the VPC ID
       amazon.aws.ec2_vpc_net_info:
