pring vpc id to screen 5:09 p

--- a/1dRHEL/1d-Teardown-all-AWS-WF-resources.yml
+++ b/1dRHEL/1d-Teardown-all-AWS-WF-resources.yml
@@ -36,6 +36,10 @@
           "tag:Name": "aws-demo1-vpc"
       register: vpc_net_facts
 
+    -name: Print the VPC ID
+      ansibl.util.debug:
+        msg: 'The VPC ID is "{{ vpc_net_facts.vpcs[0].id }}"'
+
     - name: Delete the EC2 security group for aws-demo1-vpc
       amazon.aws.ec2_group:
         vpc_id: "{{ vpc_net_facts.vpcs[0].id }}"
