--- a/1dRHEL/1dwf5-Create-RHEL-server.yml
+++ b/1dRHEL/1dwf5-Create-RHEL-server.yml
@@ -36,10 +36,11 @@
       amazon.aws.ec2_instance:
         region: "{{ ec2_region }}"
         name: aws-demo1-ec2
-        security_group: "aws-demo1-sg"
+        security_group: aws-demo1-sg
+        security_groups: aws-demo1-sg
         key_name: "aws-demo1-key"
         network: 
-          assign_public_ip: true
+          assign_public_ip: yes
           subnet_id: "{{ vpcsubnetid }}"
         instance_type: t2.medium
         image_id: "{{ server01_ami.image_id }}"
