--- a/1dRHEL/1dwf1-Create-ssh-key-pair.yml
+++ b/1dRHEL/1dwf1-Create-ssh-key-pair.yml
@@ -11,15 +11,16 @@
         name: "aws-demo1-key"
       register: create_key
 #
-    # - name: Update SSH key with latest
-    #   ansible.controller.credential:
-    #     name: AWS Demo1 Instance Key
-    #     organization: Default
-    #     credential_type: Machine
-    #     # controller_username: "{{ controller_username }}"
-    #     # controller_password: "{{ controller_password }}"
-    #     # controller_host: "{{ controller_host }}"
-    #     validate_certs: false
-    #     inputs:
-    #       ssh_key_data: "{{ create_key.key.private_key }}"
-    #   when: create_key.changed
+    - name: Update SSH key with latest
+      ansible.controller.credential:
+        name: AWS Demo1 Instance Key
+        organization: Default
+        credential_type: Machine
+        state: present
+        controller_username: "{{ controller_username }}"
+        controller_password: "{{ controller_password }}"
+        controller_host: https://localhost
+        validate_certs: false
+        inputs:
+          ssh_key_data: "{{ create_key.key.private_key }}"
+      when: create_key.changed
