update key pair

--- a/1dRHEL/1dwf1-Create-ssh-key-pair.yml
+++ b/1dRHEL/1dwf1-Create-ssh-key-pair.yml
@@ -17,9 +17,9 @@
         organization: Default
         credential_type: Machine
         state: present
-        # controller_username: "{{ controller_username }}"
-        # controller_password: "{{ controller_password }}"
-        # controller_host: "{{ controller_host }}"
+        controller_username: "{{ controller_username }}"
+        controller_password: "{{ controller_password }}"
+        controller_host: "{{ controller_host }}"
         validate_certs: false
         inputs:
           ssh_key_data: "{{ create_key.key.private_key }}"
