--- a/playbooks/aws_resources.yml
+++ b/playbooks/aws_resources.yml
@@ -28,7 +28,7 @@
           ssh_key_data: "{{ lookup('file', 'ansible-demo.pem') }}"
         controller_username: "{{ controller_username | default('admin') }}"
         controller_password: "{{ controller_password | default('ansible123!') }}"
-        controller_host: "{{ controller_host | default('127.0.0.1') }}"
+        controller_host: "{{ controller_host | default('https://controller') }}"
         validate_certs: "{{ validate_certs | default('False') }}"
 
     - name: Create AWS VPC {{ ec2_name_prefix }}-vpc
