--- a/playbooks/aws_resources.yml
+++ b/playbooks/aws_resources.yml
@@ -1,5 +1,5 @@
 ---
-- name: Create lab instances in AWS
+- name: Create AWS resources
   hosts: localhost
   connection: local
   gather_facts: false
