--- a/playbooks/aws_instances.yml
+++ b/playbooks/aws_instances.yml
@@ -8,7 +8,7 @@
     # Look for owner 309956199498 to find official Red Hat AMIs
     - name: find ami instance-id for RHEL
       amazon.aws.ec2_ami_info:
-        region: "{{ ec2_region }}"
+        region: "{{ ec2_region | default('us-east-1') }}"
         owners: 309956199498
         filters:
           name: "RHEL-8*HVM-*Hourly*"
