--- a/playbooks/aws_instances.yml
+++ b/playbooks/aws_instances.yml
@@ -47,7 +47,7 @@
           instance-state-name: running
         tags:
           ansible-demo: "true"
-        vpc_subnet_id: "{{ ec2_vpc_subnet_id.subnets.subnet_id }}"
+        vpc_subnet_id: "{{ ec2_vpc_subnet_id.subnets[0].subnet_id }}"
         volumes:
           - device_name: /dev/sda1
             ebs:
