--- a/playbooks/aws_instances.yml
+++ b/playbooks/aws_instances.yml
@@ -51,11 +51,11 @@
         volumes:
           - device_name: /dev/sda1
             ebs:
-              volume_type: "{{ ec2_info[control_type].disk_volume_type }}"
-              volume_size: "{{ ec2_info[control_type].disk_space }}"
-              iops: "{{ ec2_info[control_type].disk_iops }}"
-              throughput: "{{ ec2_info[control_type].disk_throughput }}"
-              delete_on_termination: true
+              volume_type: "{{ ec2_volume_type | default('gp3') }}"
+              volume_size: "{{ ec2_volume_size | default('40') }}"
+              iops: "{{ ec2_iops | default('3000') }}"
+              throughput: "{{ ec2_throughput | default('125') }}"
+              delete_on_termination: "{{ delete_on_termination | default('true') }}"
       register: control_output
 
     - name: grab instance ids to tag them all
