--- a/playbooks/aws_instances.yml
+++ b/playbooks/aws_instances.yml
@@ -55,7 +55,7 @@
               volume_size: "{{ ec2_volume_size | default('40') }}"
               iops: "{{ ec2_iops | default('3000') }}"
               throughput: "{{ ec2_throughput | default('125') }}"
-              delete_on_termination: "{{ delete_on_termination | default('true') }}"
+              delete_on_termination: "{{ delete_on_termination | default(True) }}"
       register: control_output
 
     - name: grab instance ids to tag them all
