--- a/playbooks/aws_instances.yml
+++ b/playbooks/aws_instances.yml
@@ -48,6 +48,8 @@
         tags:
           ansible-demo: "true"
           instruqt: "true"
+        network:
+          assign_public_ip: true
         vpc_subnet_id: "{{ ec2_vpc_subnet_id.subnets[0].subnet_id }}"
         volumes:
           - device_name: /dev/sda1
