--- a/playbooks/cloud_report.yml
+++ b/playbooks/cloud_report.yml
@@ -9,7 +9,7 @@
         name: "../roles/retrieve_info"
 
 - name: build report with facts
-  hosts: localhost
+  hosts: ansible-1
   gather_facts: no
 
   tasks:
