--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -8,8 +8,10 @@
   amazon.aws.ec2_instance_info:
     region: "{{ ec2_region | default('us-east-1') }}"
   register: ec2_instance_info
+  delegate_to: localhost
 
 - name: Gather information about Internet Gateways IGWs
   amazon.aws.ec2_vpc_igw_info:
     region: "{{ ec2_region | default('us-east-1') }}"
   register: igw_info
+  delegate_to: localhost
