--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -1,17 +1,17 @@
 - name: retrieve vpc information
   amazon.aws.ec2_vpc_net_info:
-    region: "{{ ec2_region | default('us-east-1') }}"
+    region: "{{ ec2_region }}"
   register: vpc_info
   delegate_to: localhost
 
 - name: retrieve info for ec2 instances
   amazon.aws.ec2_instance_info:
-    region: "{{ ec2_region | default('us-east-1') }}"
+    region: "{{ ec2_region }}"
   register: ec2_instance_info
   delegate_to: localhost
 
 - name: Gather information about Internet Gateways IGWs
   amazon.aws.ec2_vpc_igw_info:
-    region: "{{ ec2_region | default('us-east-1') }}"
+    region: "{{ ec2_region }}"
   register: igw_info
   delegate_to: localhost
