--- a/playbooks/cloud_report.yml
+++ b/playbooks/cloud_report.yml
@@ -2,12 +2,14 @@
 - name: build report with facts
   hosts: ansible-1
   gather_facts: false
+  vars:
+    ec2_region: us-east-1
 
   tasks:
     - name: load retrieve info role
       include_role:
         name: "../roles/retrieve_info"
-        
+
     - name: build a report
       include_role:
         name: "../roles/build_report"
