--- a/roles/build_report/tasks/main.yml
+++ b/roles/build_report/tasks/main.yml
@@ -50,7 +50,10 @@
     - "redhat-ansible-logo.svg"
     - "router.png"
 
+- name: display link to inventory report
+  debug:
+    var: hostvars
 
 - name: display link to inventory report
   debug:
-    msg: "Please go to http://{{hostvars[ansible-1].ansible_host}}:{{web_port}}"
+    msg: "Please go to http://{{hostvars['ansible-1'].ansible_host}}:{{web_port}}"
