--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -19,16 +19,20 @@
 - name: grab boto version
   command: "{{ansible_python['executable']}} -c 'import boto3; print(boto3.__version__)'"
   register: py_cmd
+  delegate_to: localhost
 
 - name: grab information about AWS user
   amazon.aws.aws_caller_info:
     region: "{{ ec2_region }}"
   register: whoami
+  delegate_to: localhost
 
 - name: print whoami
   debug:
     var: whoami
+  delegate_to: localhost
 
 - name: save username of AWS user
   set_fact:
     aws_user: '{{ whoami.arn.split("/")[-1] }}'
+  delegate_to: localhost
