--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -16,10 +16,10 @@
   register: igw_info
   delegate_to: localhost
 
-- name: grab boto version
-  command: "{{ansible_python['executable']}} -c 'import boto3; print(boto3.__version__)'"
-  register: py_cmd
-  delegate_to: localhost
+# - name: grab boto version
+#   command: "{{ ansible_python['executable'] }} -c 'import boto3; print(boto3.__version__)'"
+#   register: py_cmd
+#   delegate_to: localhost
 
 - name: grab information about AWS user
   amazon.aws.aws_caller_info:
@@ -35,4 +35,5 @@
 - name: save username of AWS user
   set_fact:
     aws_user: '{{ whoami.arn.split("/")[-1] }}'
+    py_cmd: '{{ lookup('pipe', '{{ ansible_python[\"executable\"] }} -c \"import boto3; print(boto3.__version__)\"') }}'
   delegate_to: localhost
