--- a/roles/build_report/tasks/main.yml
+++ b/roles/build_report/tasks/main.yml
@@ -58,5 +58,5 @@
   debug:
     msg:
       - "Please go to http://{{ ansible_fqdn }}:{{ web_port }}"
-      - "or just refresh the Cloud Report tab
+      - "or just refresh the Cloud Report tab"
       - "at the top of your window if you using Instruqt labs!"
