--- a/playbooks/lab3-challenge2.yml
+++ b/playbooks/lab3-challenge2.yml
@@ -5,7 +5,7 @@
   gather_facts: false
   vars:
     ec2_region: "{{ your_region | default('us-east-1') }}"
-    filter_input:
+    filter_input: |
       "tag:Name": "rhel*"
 
   tasks:
@@ -13,7 +13,7 @@
     - name: Retrieve info for the EC2 instances
       amazon.aws.ec2_instance_info:
         region: "{{ ec2_region }}"
-        filters: "{{ filter_input }}"
+        filters: "{{ filter_input | from_yaml }}"
       register: ec2_instance_info
 
     - name: Display AWS EC2 info and tags information to terminal
