update roles path

--- a/playbooks/lab2-patching.yml
+++ b/playbooks/lab2-patching.yml
@@ -1,24 +1,24 @@
 ---
-- hosts: "{{ HOSTS }}"
+- hosts: localhost
   become: yes
   vars:
     report_server: rhel1
   
   tasks:
   - include_role:
-      name: patch_linux
+      name: "../roles/patch_linux"
 
   - block:
 
     - include_role:
         name: "{{ item }}"
       loop:
-        - report_server
-        - report_linux
-        - report_linux_patching
+        - "../roles/report_server"
+        - "../roles/report_linux"
+        - "../roles/report_linux_patching"
 
     - include_role:
-        name: report_server
+        name: "../roles/report_server"
         tasks_from: linux_landing_page
         
     delegate_to: "{{ report_server }}"
