--- a/collections/ansible_collections/roles/patch_linux/tasks/main.yml
+++ b/collections/ansible_collections/roles/patch_linux/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: Scan packages
-  demo.patching.scan_packages:
+  scan_packages:
     os_family: "{{ ansible_os_family }}"
   check_mode: no
 
 - name: Scan services
-  demo.patching.scan_services:
+  scan_services:
   check_mode: no
 
 - name: upgrade packages (yum)
