update patching playbook

--- a/playbooks/lab2-patching.yml
+++ b/playbooks/lab2-patching.yml
@@ -6,19 +6,19 @@
   
   tasks:
   - include_role:
-      name: "../collections/ansible_collections/roles/patch_linux"
+      name: "patch_linux"
 
   - block:
 
     - include_role:
         name: "{{ item }}"
       loop:
-        - "../collections/ansible_collections/roles/report_server"
-        - "../collections/ansible_collections/roles/report_linux"
-        - "../collections/ansible_collections/roles/report_linux_patching"
+        - "report_server"
+        - "report_linux"
+        - "report_linux_patching"
 
     - include_role:
-        name: "../collections/ansible_collections/roles/report_server"
+        name: "report_server"
         tasks_from: linux_landing_page
         
     delegate_to: "{{ report_server }}"
