--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,4 +2,4 @@
 deprecation_warnings = False
 stdout_callback = yaml
 collections_paths=./collections
-roles_path=./roles
+roles_path=./collections/ansible_collections/roles
