--- a/playbooks/aws_ssm.yml
+++ b/playbooks/aws_ssm.yml
@@ -15,6 +15,7 @@
         ansible_aws_ssm_region: "us-east-1"
         ansible_aws_ssm_bucket_name: "ssmtestingoctober"
         ansible_aws_ssm_instance_id: i-09793f817c1a29bf4
+        ansible_user: ssm-user
       ansible.builtin.file:
         path: blah.txt
         state: touch
