--- a/playbooks/aws_ssm_assume.yml
+++ b/playbooks/aws_ssm_assume.yml
@@ -2,10 +2,11 @@
 - hosts: ssm
   gather_facts: false
   tasks:
+
+    # This is assuming a role, not a sure
     - name: SSMrole
       community.aws.sts_assume_role:
         role_arn: arn:aws:iam::962147768365:role/SSMSeanTesting
-        #role_arn: "arn:aws:iam::123456789012:role/someRole"
         role_session_name: "seantestrole"
       register: assumed_role
       delegate_to: localhost
@@ -15,11 +16,14 @@
       debug:
         var: assumed_role
 
-    - name: do something via SSM
+     # The SSMSeanTestingRole has 2 acces permissions and works
+     # AmazonSSMFullAccess
+     # AmazonS3FullAccess
+    - name: do file module via SSM
       vars:
-        access_key_id: "{{ assumed_role.sts_creds.access_key }}"
-        secret_access_key: "{{ assumed_role.sts_creds.secret_key }}"
-        session_token: "{{ assumed_role.sts_creds.session_token }}"
+        ansible_aws_ssm_access_key_id: "{{ assumed_role.sts_creds.access_key }}"
+        ansible_aws_ssm_secret_access_key: "{{ assumed_role.sts_creds.secret_key }}"
+        ansible_aws_ssm_session_token: "{{ assumed_role.sts_creds.session_token }}"
         ansible_connection: "community.aws.aws_ssm"
         ansible_aws_ssm_region: "us-east-1"
         ansible_aws_ssm_bucket_name: "ssmtestingoctober"
@@ -34,6 +38,7 @@
       debug:
         var: output
 
+   # This won't work b/c the assume role can only do S3 and SSM
     - amazon.aws.ec2_tag:
         aws_access_key: "{{ assumed_role.sts_creds.access_key }}"
         aws_secret_key: "{{ assumed_role.sts_creds.secret_key }}"
