--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -1,24 +1,5 @@
 ---
-- name: Retrieve vpc information
-  amazon.aws.ec2_vpc_net_info:
-    region: "{{ ec2_region }}"
-  register: vpc_info
-  delegate_to: localhost
-
-- name: Retrieve info for ec2 instances
-  amazon.aws.ec2_instance_info:
-    region: "{{ ec2_region }}"
-  register: ec2_instance_info
-  delegate_to: localhost
-
-- name: Retrieve information about Internet Gateways IGWs
-  amazon.aws.ec2_vpc_igw_info:
-    region: "{{ ec2_region }}"
-  register: igw_info
-  delegate_to: localhost
-
-- name: Set facts all info for {{ ec2_region }}
-  set_fact:
-    '{{ ec2_region|replace("-", "_") }}': '{{ vpc_info }}'
-    '{{ ec2_region|replace("-", "_") }}': '{{ ec2_instance_info }}'
-    '{{ ec2_region|replace("-", "_") }}': '{{ igw_info }}'    
+- name: loop over all ec2 regins
+  ansible.builtin.include_tasks:
+    file: retrieve_info.yml
+  loop: "{{ ec2_regions }}"
