sync commented out bad regions

--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -3,3 +3,7 @@
   ansible.builtin.include_tasks:
     file: retrieve_info.yml
   loop: "{{ ec2_regions }}"
+
+- name: print out all region info
+  debug:
+    var: us_east_1
