--- a/roles/retrieve_info/tasks/retrieve_info.yml
+++ b/roles/retrieve_info/tasks/retrieve_info.yml
@@ -20,6 +20,7 @@
 # Dashes are not allowed as Ansible var names so we use underscores _
 - name: Set facts all info for {{ item }}
   set_fact:
-    '{{ item|replace("-", "_") }}': '{{ vpc_info }}'
-    '{{ item|replace("-", "_") }}': '{{ ec2_instance_info }}'
-    '{{ item|replace("-", "_") }}': '{{ igw_info }}'    
+    '{{ item|replace("-", "_") }}':
+      vpc_info:  '{{ vpc_info }}'
+      ec2_instance_info: '{{ ec2_instance_info }}'
+      igw_info: '{{ igw_info }}'
