sync template change

--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -7,3 +7,7 @@
 - name: print out all region info
   debug:
     var: us_east_1
+
+- name: print out all region info
+  debug:
+    var: hostvars[localhost]
