--- a/roles/retrieve_info/tasks/retrieve_info.yml
+++ b/roles/retrieve_info/tasks/retrieve_info.yml
@@ -24,3 +24,7 @@
       vpc_info:  '{{ vpc_info }}'
       ec2_instance_info: '{{ ec2_instance_info }}'
       igw_info: '{{ igw_info }}'
+
+- name: Set facts all info for {{ item }}
+  set_fact:
+    all_ec2_regions: "{{ all_ec2_regions | default ({}) | combine( '{{ item|replace("-", "_") }}' )
