--- a/roles/retrieve_info/tasks/retrieve_info.yml
+++ b/roles/retrieve_info/tasks/retrieve_info.yml
@@ -19,16 +19,12 @@
 
 # Dashes are not allowed as Ansible var names so we use underscores _
 - name: Set facts all info for {{ item }}
-  vars:
-    specific_region: '{{ item|replace("-", "_") }}'
   set_fact:
-    '{{ specific_region }}':
+    '{{ item|replace("-", "_") }}':
       vpc_info:  '{{ vpc_info }}'
       ec2_instance_info: '{{ ec2_instance_info }}'
       igw_info: '{{ igw_info }}'
 
 - name: Set facts all info for {{ item }}
-  vars:
-    specific_region: '{{ item|replace("-", "_") }}'
   set_fact:
-    all_ec2_regions: "{{ all_ec2_regions | default ({}) | combine( specific_region ) }}"
+    all_ec2_regions: "{{ all_ec2_regions | default ({}) | combine( item|replace("-", "_") ) }}"
