--- a/roles/retrieve_info/tasks/retrieve_info.yml
+++ b/roles/retrieve_info/tasks/retrieve_info.yml
@@ -18,13 +18,18 @@
   delegate_to: localhost
 
 # Dashes are not allowed as Ansible var names so we use underscores _
+# - name: Set facts all info for {{ item }}
+#   set_fact:
+#     '{{ item|replace("-", "_") }}':
+#       vpc_info:  '{{ vpc_info }}'
+#       ec2_instance_info: '{{ ec2_instance_info }}'
+#       igw_info: '{{ igw_info }}'
+
 - name: Set facts all info for {{ item }}
-  set_fact:
+  vars: 
     '{{ item|replace("-", "_") }}':
       vpc_info:  '{{ vpc_info }}'
       ec2_instance_info: '{{ ec2_instance_info }}'
-      igw_info: '{{ igw_info }}'
-
-- name: Set facts all info for {{ item }}
+      igw_info: '{{ igw_info }}' 
   set_fact:
-    all_ec2_regions: "{{ all_ec2_regions | default ({}) | combine( hostvars[inventory_hostname][item|replace('-','_')] ) }}"
+    all_ec2_regions: "{{ all_ec2_regions | default ([]) + item|replace('-','_') }}"
