--- a/roles/retrieve_info/tasks/retrieve_info.yml
+++ b/roles/retrieve_info/tasks/retrieve_info.yml
@@ -18,18 +18,13 @@
   delegate_to: localhost
 
 # Dashes are not allowed as Ansible var names so we use underscores _
-# - name: Set facts all info for {{ item }}
-#   set_fact:
-#     '{{ item|replace("-", "_") }}':
-#       vpc_info:  '{{ vpc_info }}'
-#       ec2_instance_info: '{{ ec2_instance_info }}'
-#       igw_info: '{{ igw_info }}'
-
 - name: Set facts all info for {{ item }}
-  vars: 
+  set_fact:
     '{{ item|replace("-", "_") }}':
       vpc_info:  '{{ vpc_info }}'
       ec2_instance_info: '{{ ec2_instance_info }}'
-      igw_info: '{{ igw_info }}' 
+      igw_info: '{{ igw_info }}'
+
+- name: Set facts all info for {{ item }} 
   set_fact:
-    all_ec2_regions: "{{ all_ec2_regions | default ([]) + [item|replace('-','_')] }}"
+    all_ec2_regions: "{{ all_ec2_regions | default ([]) + [hostvars[inventory_hostname][item|replace('-','_')]] }}"
