--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -4,10 +4,25 @@
     file: retrieve_info.yml
   loop: "{{ ec2_regions }}"
 
-# - name: print out all region info
-#   debug:
-#     var: us_east_1
+- name: grab boto version
+  command: "{{ ansible_python['executable'] }} -c 'import boto3; print(boto3.__version__)'"
+  register: py_cmd
+  delegate_to: localhost
 
-- name: print out all region info
+- name: grab information about AWS user
+  amazon.aws.aws_caller_info:
+    region: "{{ ec2_region }}"
+  register: whoami
+  delegate_to: localhost
+
+- name: print whoami
   debug:
-    var: hostvars
+    var: whoami
+  delegate_to: localhost
+
+- name: save username of AWS user
+  set_fact:
+    aws_user: '{{ whoami.arn.split("/")[-1] }}'
+    py_cmd: >-
+      {{ lookup('pipe', ansible_playbook_python ~ ' -c "import boto3; print(boto3.__version__)"') }}
+  delegate_to: localhost
