--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -9,6 +9,17 @@
   register: py_cmd
   delegate_to: localhost
 
+- name: grab boto version
+  ansible.builtin.pip:
+    name: boto3
+  register: register_boto3_version
+  check_mode: true
+
+- set_fact:
+    boto3_version: '{{ boto3[7:] }}'
+  vars:
+    boto3: '{{ register_boto3_version.stdout_lines | select("match","boto3") | first }}'
+
 - name: grab information about AWS user
   amazon.aws.aws_caller_info:
     region: "{{ ec2_region }}"
