--- a/roles/build_report/tasks/main.yml
+++ b/roles/build_report/tasks/main.yml
@@ -54,9 +54,16 @@
   debug:
     var: hostvars['ansible-1']
 
+- name: retrieve public IP address
+  ansible.builtin.uri:
+    url: ifconfig.me
+    return_content: true
+  register: public_ip_report
+  ignore_errors: true
+
 - name: display link to inventory report
   debug:
     msg:
-      - "Please go to http://{{ ansible_fqdn }}:{{ web_port }}"
+      - "Please go to http://{{ public_ip_report | default(ansible_fqdn) }}:{{ web_port }}"
       - "or just refresh the Cloud Report tab"
       - "at the top of your window if you using Instruqt labs!"
