--- a/roles/retrieve_info/tasks/main.yml
+++ b/roles/retrieve_info/tasks/main.yml
@@ -14,7 +14,7 @@
   ansible.builtin.set_fact:
     boto3_version: '{{ boto3[7:] }}'
   vars:
-    boto3: '{{ register_boto3_version.stdout_lines | select("match","boto3") | first }}'
+    boto3: '{{ register_boto3_version.stdout_lines | select("match","boto3") | first | default("Unknown") }}'
 
 - name: grab information about AWS user
   amazon.aws.aws_caller_info:
